# AI-EHR-Patient-Portal-Assistant

./: .env.example  .gitignore  AGENTS.md  AI-powered Electronic Health Record portal.html  AI-powered Electronic Health Record portal.ipynb  CONTRIBUTING.md  README.md  justfile  pyproject.toml  requirements.txt
.claude/: settings.json
.cursor/rules/: 00-always.mdc  langgraph.mdc  tests.mdc  writing-rules.mdc
.github/workflows/: ci.yml
data/: safety_policy_rules.csv
notebooks/exploration/: AI-Powered Electronic Health Record Patient Portal Assistant.ipynb  AI-powered Electronic Health Record portal.ipynb
src/ehr_assistant/: __init__.py  __main__.py  config.py  data.py  db.py  runner.py  utils.py
src/ehr_assistant/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/ehr_assistant/reporting/: __init__.py  json_writer.py  terminal.py
src/ehr_assistant/tools/: __init__.py  education.py  patient.py  policy.py
tests/: conftest.py  test_integration.py  test_nodes.py  test_policy.py  test_tools.py
