[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ehr-assistant"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langgraph>=1.1,<2",
    "openai>=2.0,<3",
    "pandas>=2.0,<3",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ehr-assistant = "ehr_assistant.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ehr_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
